--- a/TronClient/TronClient.csproj
+++ b/TronClient/TronClient.csproj
@@ -8,11 +8,17 @@
         <Version>1.0.0</Version>
         <Authors>argfoo</Authors>
         <Product>TronClient</Product>
+        <RepositoryUrl>https://github.com/zhifenglee-portkey/tron-client.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="HDWallet.Tron" Version="0.7.0" />
-      <PackageReference Include="TronNet.ABI" Version="0.2.0" />
+        <PackageReference Include="HDWallet.Tron" Version="0.7.0" />
+        <PackageReference Include="TronNet.ABI" Version="0.2.0" />
+        <None Include="../LICENSE" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
